<resources>
    <string name="app_name">CSE476Exam_Aaron_Elkin</string>
    <string name="not_set">Not Set</string>
    <string name="set_text">Set Text</string>
    <string name="set_image">Set Image</string>
    <string name="accelerometer_readings_none_yet">No Readings Captured</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="save">Save</string>
    <string name="back_button">Back Button</string>
    <string name="fetch">Fetch</string>
    <string name="back">Back</string>
    <string name="enter_image_url">Enter image URL</string>
    <string name="accelerometer_not_available_on_this_device">Accelerometer not available on this device.</string>
    <string name="acceleration_values_x_2f_y_2f_z_2f_amplitude_2f">Acceleration Values: X: %.2f, Y: %.2f, Z: %.2f\nAmplitude: %.2f</string>
    <string name="data_saved_successfully">Data saved successfully.</string>
    <string name="no_data_captured">No data captured to save. Start and stop capturing first.</string>
    <string name="no_capture_to_stop">No capture to stop.</string>
    <string name="capture_stopped">Capture stopped.</string>
</resources>