<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/holo_green_light"
tools:context=".AccelerometerActivity">

    <!-- Accelerometer Data Display -->
    <TextView
        android:id="@+id/accelerometerData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer_readings_none_yet"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <!-- Start Capture Button -->
    <Button
        android:id="@+id/startCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_capture"
        android:backgroundTint="#20D828"
        android:onClick="onClickStartCapture"
        app:layout_constraintTop_toBottomOf="@id/accelerometerData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Stop Capture Button -->
    <Button
        android:id="@+id/stopCapture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_capture"
        android:backgroundTint="#DA1C1C"
        android:onClick="onClickStopCapture"
        app:layout_constraintTop_toBottomOf="@id/startCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="#FF9800"
        android:onClick="onClickSave"
        app:layout_constraintTop_toBottomOf="@id/stopCapture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/back_button"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:onClick="onClickBack"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
